# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  14 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Stop providing the NVdriver alias, #158099.

    Fix routes and lo correctly, #157965.

  13 Dec 2006; Mike Frysinger <vapier@gentoo.org>:

    Move /sbin/modules-update to the module-init-tools package.

* baselayout-1.13.0_alpha9 (12 Dec 2006)

  12 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Assume all routes are host routes unless we have a valid netmask,
    #157418 thanks to Alexander Zubkov.

    Fix --nicelevel in rc-daemon.sh, #157847 thanks to Sven Wegner.

    sysvinit now provides shutdown.sh and reboot.sh, #112991.

    Add dev-zero's patch for start-stop-daemon fd redirection, but with a few
    bits from Iain Buchanan on bug #138409.

  09 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Fix the stopping of services when using --name or --retry.

    Don't unmount anything inside of /proc like nfs or usb.

    Don't start USE services unless they are in the runlevel, #157589.

  09 Dec 2006; Mike Frysinger <vapier@gentoo.org>:

    Add a new TIMEZONE variable to /etc/conf.d/clock so we can track the
    timezone setting of /etc/localtime properly.

    Punt /etc/init.d/{reboot,shutdown}.sh to the sysvinit package.

* baselayout-1.13.0_alpha8 (07 Dec 2006)

  07 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Replace checkroot bash regex with a sed regex so we're more robust, #157115.

    Install /etc/COPYRIGHT and /etc/protocols for BSD.

  06 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Warn about things stamping on /etc/resolv.conf a little better, #156840.

    Report /etc/init.d/$SVCNAME in syslog instead of rcscripts,
    #156138 thanks to Wolfram Schlich.

    Fix single on the kernel command line again, #154961.

    Turns out s-s-d using /proc/pid/exe doesn't work when the symlink has