@@ -1,5 +1,5 @@
 DIR   = /etc
-FILES = COPYRIGHT issue issue.logo login.conf protocols rc rc.shutdown services
+FILES = COPYRIGHT issue issue.logo login.conf rc rc.shutdown services
 
 TOPDIR = ..
 include $(TOPDIR)/default.mk
