@@ -1,6 +1,6 @@
 SUBDIRS = modules.d modules.autoload.d
 DIR   = /etc
-FILES = filesystems inputrc issue issue.logo protocols services
+FILES = filesystems inputrc issue issue.logo services
 FILES_NOEXIST = sysctl.conf
 
 TOPDIR = ..
