@@ -1,7 +1,7 @@
 SUBDIRS = env.d
 
 DIR   = /etc
-FILES = hosts networks profile rc.conf shells
+FILES = hosts networks profile protocols rc.conf shells
 
 TOPDIR = ..
 include $(TOPDIR)/default.mk
